--- a/public/assignment/views/admin/admin.view.html
+++ b/public/assignment/views/admin/admin.view.html
@@ -10,13 +10,13 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Forms</title>
+    <title>Admin</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
 
 </head>
 
@@ -35,10 +35,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="login.html">Username</a></li>
-                <li><a href="login.html">Logout</a></li>
+                <li><a href="../users/register.view.html">Register</a></li>
+                <li><a href="../users/login.view.html">Login</a></li>
+                <li><a href="../users/login.view.html">Username</a></li>
+                <li><a href="../users/login.view.html">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
@@ -51,73 +51,81 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="admin.html">Admin</a></li>
-                <li class="active"><a href="forms.html">Forms</a></li>
+                <li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="../users/profile.view.html">Profile</a></li>
+                <li class="active"><a href="admin.view.html">Admin</a></li>
+                <li><a href="../forms/forms.view.html">Forms</a></li>
             </ul>
         </div>
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
-            <h1>Forms</h1>
+            <h1>Admin</h1>
 
-            <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a href="forms.html">Forms</a></li>
-                <li role="presentation"><a href="form-fields.html">Fields</a></li>
-            </ul>
+            <h3>Users</h3>
 
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th><span class="glyphicon glyphicon-triangle-bottom"></span> Form Name</th>
-                        <th><span class="glyphicon glyphicon-triangle-bottom"></span> Action</th>
+                        <th><span class="glyphicon glyphicon-triangle-bottom"></span>Username</th>
+                        <th><span class="glyphicon glyphicon-triangle-bottom"></span>Password</th>
+                        <th><span class="glyphicon glyphicon-triangle-bottom"></span>Role</th>
+                        <th><span class="glyphicon glyphicon-triangle-bottom"></span>Action</th>
                     </tr>
                     </thead>
 
                     <tbody>
                     <tr>
-                        <td><input type="text" class="form-control" placeholder="name"></td>
+                        <td><input type="text" class="form-control" placeholder="username"></td>
+                        <td><input type="password" class="form-control" placeholder="password"></td>
+                        <td><input type="text" class="form-control" placeholder="role1, role2"></td>
                         <td>
                             <div>
-                                <div class="col-xs-6">
-                                    <a href="form-fields.html">
-                                        <span class="glyphicon glyphicon-plus"></span>
+
+                                <div class="col-sm-6">
+                                    <a href="../users/register.view.html">
+                                    <span class="glyphicon glyphicon-plus"></span>
                                     </a>
                                 </div>
-                                <div class="col-xs-6">
-                                    <a href="forms.html">
-                                        <span class="glyphicon glyphicon-ok"></span>
+                                <div class="col-sm-6">
+                                    <a href="admin.view.html">
+                                    <span class="glyphicon glyphicon-ok"></span>
                                     </a>
                                 </div>
                             </div>
                         </td>
                     </tr>
                     <tr>
-                        <td>Registration Form</td>
+                        <td>alice</td>
+                        <td></td>
+                        <td>student</td>
                         <td>
                             <div>
-                                <a href="forms.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
-                                <a href="form-fields.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
+                                <a href="admin.view.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
+                                <a href="../users/profile.view.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
                             </div>
                         </td>
                     </tr>
                     <tr>
-                        <td>Contact List</td>
+                        <td>bob</td>
+                        <td></td>
+                        <td>faculty | admin</td>
                         <td>
                             <div>
-                                <a href="forms.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
-                                <a href="form-fields.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
+                                <a href="admin.view.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
+                                <a href="../users/profile.view.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
                             </div>
                         </td>
                     </tr>
                     <tr>
-                        <td>To Do List</td>
+                        <td>charlie</td>
+                        <td></td>
+                        <td></td>
                         <td>
                             <div>
-                                <a href="forms.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
-                                <a href="form-fields.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
+                                <a href="admin.view.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
+                                <a href="../users/profile.view.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
                             </div>
                         </td>
                     </tr>
