--- a/public/assignment/views/forms/fields.view.html
+++ b/public/assignment/views/forms/fields.view.html
@@ -16,7 +16,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
 
 </head>
 
@@ -35,10 +35,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="login.html">Username</a></li>
-                <li><a href="login.html">Logout</a></li>
+                <li><a href="../users/register.view.html">Register</a></li>
+                <li><a href="../users/login.view.html">Login</a></li>
+                <li><a href="../users/login.view.html">Username</a></li>
+                <li><a href="../users/login.view.html">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
@@ -51,10 +51,10 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="admin.html">Admin</a></li>
-                <li class="active"><a href="forms.html">Forms</a></li>
+                <li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="../users/profile.view.html">Profile</a></li>
+                <li><a href="../admin/admin.view.html">Admin</a></li>
+                <li class="active"><a href="forms.view.html">Forms</a></li>
             </ul>
         </div>
 
@@ -63,11 +63,11 @@
             <h1>Forms : Registration Form</h1>
 
             <ul class="nav nav-tabs">
-                <li role="presentation"><a href="forms.html">Forms</a></li>
-                <li role="presentation" class="active"><a href="form-fields.html">Fields</a></li>
+                <li role="presentation"><a href="forms.view.html">Forms</a></li>
+                <li role="presentation" class="active"><a href="fields.view.html">Fields</a></li>
             </ul>
 
-            <form class="form" action="form-fields.html">
+            <form class="form" action="fields.view.html">
                 <div class="form-group">
                     <div class="col-sm-12">
                         <label for="inputFirstName">First Name:</label>
@@ -77,16 +77,16 @@
                     </div>
 
                     <div class="col-sm-4">
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                              <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                              <span class="glyphicon glyphicon-plus"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                              <span class="glyphicon glyphicon-remove"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                              <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
@@ -101,16 +101,16 @@
                         <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
                     </div>
                     <div class="col-sm-4">
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-plus"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
@@ -125,16 +125,16 @@
                         <input type="date" class="form-control" id="inputDate" placeholder="select date">
                     </div>
                     <div class="col-sm-4">
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-plus"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
@@ -151,16 +151,16 @@
                         </select>
                     </div>
                     <div class="col-sm-4">
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-plus"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
@@ -182,16 +182,16 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-plus"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
@@ -213,16 +213,16 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-plus"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
@@ -250,16 +250,16 @@
                         </select>
                     </div>
                     <div class="col-sm-4">
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-plus"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
-                        <a href="register.html">
+                        <a href="../users/register.view.html">
                             <span class="glyphicon glyphicon-menu-hamburger"></span>
                         </a>
                     </div>
