--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -3,6 +3,6 @@
         <li ng-class="{'active': $location.url() == '/home'}"><a href="#/home">Home</a></li>
         <li ng-class="{'active': $location.url() == '/profile'}"><a href="#/profile">Profile</a></li>
         <li ng-class="{'active': $location.url() == '/admin'}"><a href="#/admin">Admin</a></li>
-        <li ng-class="{'active': $location.url() == '/form'}"><a href="#/form">Form</a></li>
+        <li ng-class="{'active': $location.url() == '/forms'}"><a href="#/forms">Form</a></li>
     </ul>
 </div>
