--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -5,28 +5,28 @@
         <div class="form-group">
             <label for="inputName" class="col-sm-2 control-label">Username: </label>
             <div class="col-sm-10">
-                <input ng-model="user.username" type="text" class="form-control" id="inputName" placeholder="Username">
+                <input ng-model="userRegister.username" type="text" class="form-control" id="inputName" placeholder="Username">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputPassword" class="col-sm-2 control-label">Password: </label>
             <div class="col-sm-10">
-                <input ng-model="user.password" type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <input ng-model="userRegister.password" type="password" class="form-control" id="inputPassword" placeholder="Password">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputPassword2" class="col-sm-2 control-label">Verify Password: </label>
             <div class="col-sm-10">
-                <input ng-model="user.password2" type="password" class="form-control" id="inputPassword2" placeholder="Password">
+                <input ng-model="userRegister.password2" type="password" class="form-control" id="inputPassword2" placeholder="Password">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputEmail" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-                <input ng-model="user.email" type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <input ng-model="userRegister.email" type="email" class="form-control" id="inputEmail" placeholder="Email">
             </div>
         </div>
 
