--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -1,140 +1,52 @@
+<div ng-controller="FormController">
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <h1>Forms</h1>
 
-    <title>Forms</title>
+    <ul class="nav nav-tabs">
+        <li role="presentation" ng-class="{'active': $location.url() == '/forms'}"><a href="#/forms">Forms</a></li>
+        <li role="presentation" ng-class="{'active': $location.url() == '/fields'}"><a href="#/fields">Fields</a></li>
+    </ul>
 
-    <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th><span class="glyphicon glyphicon-triangle-bottom"></span> Form Name</th>
+                <th><span class="glyphicon glyphicon-triangle-bottom"></span> Action</th>
+            </tr>
+            </thead>
 
-    <!-- Custom styles for this template -->
-    <link href="../../css/style.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="../users/register.view.html">Register</a></li>
-                <li><a href="../users/login.view.html">Login</a></li>
-                <li><a href="../users/login.view.html">Username</a></li>
-                <li><a href="../users/login.view.html">Logout</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
-        </div>
+            <tbody>
+            <tr>
+                <td><input id="selectForm"  type="text" class="form-control" placeholder="name"></td>
+                <td>
+                    <div>
+                        <div class="col-xs-6">
+                            <a ng-click="addForm()">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </a>
+                        </div>
+                        <div class="col-xs-6">
+                            <a ng-click="updateForm()">
+                                <span class="glyphicon glyphicon-ok"></span>
+                            </a>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr ng-repeat="form in currentForms">
+                <td>{{form.title}}</td>
+                <td>
+                    <a ng-click="deleteForm($index)">
+                        <scan class="glyphicon glyphicon-remove"></scan>
+                    </a>
+                    <a ng-click="selectForm($index)">
+                        <scan class="glyphicon glyphicon-pencil"></scan>
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-</nav>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav nav-sidebar">
-                <li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="../users/profile.view.html">Profile</a></li>
-                <li><a href="../admin/admin.view.html">Admin</a></li>
-                <li class="active"><a href="forms.view.html">Forms</a></li>
-            </ul>
-        </div>
-
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-
-            <h1>Forms</h1>
-
-            <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a href="forms.view.html">Forms</a></li>
-                <li role="presentation"><a href="fields.view.html">Fields</a></li>
-            </ul>
-
-            <div class="table-responsive">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th><span class="glyphicon glyphicon-triangle-bottom"></span> Form Name</th>
-                        <th><span class="glyphicon glyphicon-triangle-bottom"></span> Action</th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-                    <tr>
-                        <td><input type="text" class="form-control" placeholder="name"></td>
-                        <td>
-                            <div>
-                                <div class="col-xs-6">
-                                    <a href="fields.view.html">
-                                        <span class="glyphicon glyphicon-plus"></span>
-                                    </a>
-                                </div>
-                                <div class="col-xs-6">
-                                    <a href="forms.view.html">
-                                        <span class="glyphicon glyphicon-ok"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Registration Form</td>
-                        <td>
-                            <div>
-                                <a href="forms.view.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
-                                <a href="fields.view.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Contact List</td>
-                        <td>
-                            <div>
-                                <a href="forms.view.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
-                                <a href="fields.view.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>To Do List</td>
-                        <td>
-                            <div>
-                                <a href="forms.view.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
-                                <a href="fields.view.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
-                            </div>
-                        </td>
-                    </tr>
-
-                    </tbody>
-                </table>
-            </div>
-
-
-        </div>
-    </div>
 </div>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</body>
-</html>
