--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -6,41 +6,41 @@
         <div class="form-group">
             <label for="inputName" class="col-sm-2 control-label">Username: </label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputName" placeholder="Username">
+                <input ng-model="userProfile.username" type="text" class="form-control" id="inputName" placeholder="Username">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputPassword" class="col-sm-2 control-label">Password: </label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <input ng-model="userProfile.password" type="password" class="form-control" id="inputPassword" placeholder="Password">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputFirstName" class="col-sm-2 control-label">First Name: </label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputFirstName" placeholder="First Name">
+                <input ng-model="userProfile.firstName" type="text" class="form-control" id="inputFirstName" ng-value="{{$root.user.username}}" placeholder="First Name">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputLastName" class="col-sm-2 control-label">Last Name: </label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputLastName" placeholder="Last Name">
+                <input ng-model="userProfile.lastName" type="text" class="form-control" id="inputLastName" placeholder="Last Name">
             </div>
         </div>
 
         <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <input ng-model="userProfile.email" type="email" class="form-control" id="inputEmail" placeholder="Email">
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <a href="profile.view.html" class="btn btn-default btn-block" role="button">Update</a>
+                <a ng-click="update()" type="submit" class="btn btn-default btn-block" role="button">Update</a>
             </div>
         </div>
 
