--- a/public/assignment/views/admin/admin.view.html
+++ b/public/assignment/views/admin/admin.view.html
@@ -1,6 +1,6 @@
 <div ng-controller="AdminController">
 
-    <h1>Admin</h1>
+    <h1 style="text-align: center">Admin</h1>
 
     <h3>Users</h3>
 
@@ -25,12 +25,12 @@
 
                         <div class="col-sm-6">
                             <a href="../users/register.view.html">
-                            <span class="glyphicon glyphicon-plus"></span>
+                            <span style="font-size: 30px;" class="glyphicon glyphicon-plus"></span>
                             </a>
                         </div>
                         <div class="col-sm-6">
                             <a href="admin.view.html">
-                            <span class="glyphicon glyphicon-ok"></span>
+                            <span style="font-size: 30px;" class="glyphicon glyphicon-ok"></span>
                             </a>
                         </div>
                     </div>
@@ -42,8 +42,8 @@
                 <td>student</td>
                 <td>
                     <div>
-                        <a href="admin.view.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
-                        <a href="../users/profile.view.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
+                        <a href="admin.view.html"><div style="font-size: 30px;" class="col-xs-6 glyphicon glyphicon-remove"></div></a>
+                        <a href="../users/profile.view.html"><div style="font-size: 30px;" class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
                     </div>
                 </td>
             </tr>
@@ -53,8 +53,8 @@
                 <td>faculty | admin</td>
                 <td>
                     <div>
-                        <a href="admin.view.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
-                        <a href="../users/profile.view.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
+                        <a href="admin.view.html"><div style="font-size: 30px;" class="col-xs-6 glyphicon glyphicon-remove"></div></a>
+                        <a href="../users/profile.view.html"><div style="font-size: 30px;" class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
                     </div>
                 </td>
             </tr>
@@ -64,8 +64,8 @@
                 <td></td>
                 <td>
                     <div>
-                        <a href="admin.view.html"><div class="col-xs-6 glyphicon glyphicon-remove"></div></a>
-                        <a href="../users/profile.view.html"><div class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
+                        <a href="admin.view.html"><div style="font-size: 30px;" class="col-xs-6 glyphicon glyphicon-remove"></div></a>
+                        <a href="../users/profile.view.html"><div style="font-size: 30px;" class="col-xs-6 glyphicon glyphicon-pencil"></div></a>
                     </div>
                 </td>
             </tr>
