--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -1,6 +1,6 @@
 <div ng-controller="FormController">
 
-    <h1>Forms</h1>
+    <h1 style="text-align: center">Forms</h1>
 
     <ul class="nav nav-tabs">
         <li role="presentation" ng-class="{'active': $location.url() == '/forms'}"><a href="#/forms">Forms</a></li>
