--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -1,8 +1,7 @@
 <div ng-controller="LoginController">
 
-    <h1>Login</h1>
-
     <form class="form-horizontal">
+        <h1 style="text-align: center">Login</h1>
         <div class="form-group">
             <label for="inputName" class="col-sm-2 control-label">Username: </label>
             <div class="col-sm-10">
