--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -1,12 +1,12 @@
 <div ng-controller="ProfileController">
 
-    <h1>Profile</h1>
+    <h1 style="text-align: center">Profile</h1>
 
     <form class="form-horizontal">
         <div class="form-group">
             <label for="inputName" class="col-sm-2 control-label">Username: </label>
             <div class="col-sm-10">
-                <input ng-model="userProfile.username" type="text" class="form-control" id="inputName" placeholder="Username">
+                <input ng-model="userProfile.username" type="text" class="form-control" ng-value="getUserName()" id="inputName" placeholder="Username">
             </div>
         </div>
 
@@ -20,27 +20,27 @@
         <div class="form-group">
             <label for="inputFirstName" class="col-sm-2 control-label">First Name: </label>
             <div class="col-sm-10">
-                <input ng-model="userProfile.firstName" type="text" class="form-control" id="inputFirstName" ng-value="{{$root.user.username}}" placeholder="First Name">
+                <input ng-model="userProfile.firstName" type="text" class="form-control" ng-value="getFirstName()" id="inputFirstName" ng-value="{{user.username}}" placeholder="First Name">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputLastName" class="col-sm-2 control-label">Last Name: </label>
             <div class="col-sm-10">
-                <input ng-model="userProfile.lastName" type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+                <input ng-model="userProfile.lastName" type="text" class="form-control" ng-value="getLastName()" id="inputLastName" placeholder="Last Name">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputEmail" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-                <input ng-model="userProfile.email" type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <input ng-model="userProfile.email" type="email" class="form-control" ng-value="getEmail()" id="inputEmail" placeholder="Email">
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <a ng-click="update()" type="submit" class="btn btn-default btn-block" role="button">Update</a>
+                <a ng-click="update(userProfile)" type="submit" class="btn btn-default btn-block" role="button">Update</a>
             </div>
         </div>
 
