--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -1,5 +1,5 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-controller="RegisterController">
-    <h1>Register</h1>
+<div ng-controller="RegisterController">
+    <h1 style="text-align: center">Register</h1>
 
     <form class="form-horizontal">
         <div class="form-group">
