--- a/public/assignment/views/forms/fields.view.html
+++ b/public/assignment/views/forms/fields.view.html
@@ -1,6 +1,10 @@
 <div ng-controller="FieldsController">
 
-    <h1 style="text-align: center">Forms : Registration Form (To Be Continue...)</h1>
+    <h1 style="text-align: center">Forms : Registration Form</h1>
+
+    <div class="alert alert-success" role="alert">
+        <h2 style="text-align: center">See you soon!</h2>
+    </div>
 
     <ul class="nav nav-tabs">
         <li role="presentation" ng-class="{'active': $location.url() == '/forms'}"><a href="#/forms">Forms</a></li>
