--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -30,7 +30,7 @@
                             </a>
                         </div>
                         <div class="col-xs-3">
-                            <a ng-click="updateForm()">
+                            <a ng-click="updateForm(index)">
                                 <span class="glyphicon glyphicon-ok" style="font-size: 30px;"></span>
                             </a>
                         </div>
@@ -50,7 +50,7 @@
 
                     <div>
                         <div class="col-xs-3">
-                            <a ng-click="selectForm($index)">
+                            <a ng-click="selectForm(index)">
                                  <scan class="glyphicon glyphicon-pencil" style="font-size: 30px;"></scan>
                             </a>
                         </div>
