--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -1,214 +1,208 @@
-<div ng-controller="FieldsController">
-
-    <h1 style="text-align: center">Forms : Registration Form</h1>
-
-    <div class="alert alert-success" role="alert">
-        <h2 style="text-align: center">See you soon!</h2>
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <h1 class="page-header">{{title}}</h1>
+    <div>
+        <ul class="nav nav-tabs">
+            <li role="presentation">
+                <a href="#/forms">Forms</a>
+            </li>
+            <li role="presentation" class="active">
+                <a href="#/fields">Fields</a>
+            </li>
+        </ul>
     </div>
 
-    <ul class="nav nav-tabs">
-        <li role="presentation" ng-class="{'active': $location.url() == '/forms'}"><a href="#/forms">Forms</a></li>
-        <li role="presentation" ng-class="{'active': $location.url() == '/fields'}"><a href="#/fields">Fields</a></li>
-    </ul>
-
-    <form class="form" action="fields.view.html">
-        <div class="form-group">
-            <div class="col-sm-12">
-                <label for="inputFirstName">First Name:</label>
-            </div>
-            <div class="col-sm-8">
-                <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
-            </div>
-
-            <div class="col-sm-4">
-                <a href="../users/register.view.html">
-                     <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-                <a href="../users/register.view.html">
-                     <span class="glyphicon glyphicon-plus"></span>
-                </a>
-                <a href="../users/register.view.html">
-                     <span class="glyphicon glyphicon-remove"></span>
-                </a>
-                <a href="../users/register.view.html">
-                     <span class="glyphicon glyphicon-menu-hamburger"></span>
-                </a>
-            </div>
-
-        </div>
-
-        <div class="form-group">
-            <div class="col-sm-12">
-                <label for="inputLastName">Last Name:</label>
-            </div>
-            <div class="col-sm-8">
-                <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
-            </div>
-            <div class="col-sm-4">
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                </a>
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            <div class="col-sm-12">
-                <label for="inputDate">Date of Birth: </label>
-            </div>
-            <div class="col-sm-8">
-                <input type="date" class="form-control" id="inputDate" placeholder="select date">
-            </div>
-            <div class="col-sm-4">
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                </a>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-sm-12">
-                <label for="inputGender">Gender: </label>
-            </div>
-            <div class="col-sm-8">
-                <select class="form-control" id="inputGender" placeholder="select gender">
-                    <option>Male</option>
-                    <option>Female</option>
-                </select>
-            </div>
-            <div class="col-sm-4">
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                </a>
-            </div>
-        </div>
-        <br><br>
-        <div class="form-group">
-            <div class="col-sm-12">
-                <label>Roles:</label>
-            </div>
-            <div class="col-sm-8">
-                <div class="checkbox">
-                    <label><input type="checkbox" value="Admin" checked>Admin</label>
+    <form class="form form-responsive">
+        <div ng-model="fields"  ui-sortable="fields" class="form-group">
+            <div  ng-switch="field.type" ng-repeat="field in fields" class="row">
+                <div class="col-sm-9">
+                    <div ng-switch-when="TEXT">
+                        <label>{{field.label}}</label>
+                        <div>
+                            <input type="text" class="form-control" placeholder={{field.placeholder}}>
+                        </div>
+                    </div>
+                    <div ng-switch-when="EMAIL">
+                        <label>{{field.label}}</label>
+                        <div>
+                            <input type="text" class="form-control" placeholder={{field.placeholder}}>
+                        </div>
+                    </div>
+                    <div ng-switch-when="OPTIONS">
+                        <label>{{field.label}}</label>
+                        <div>
+                            <select class="form-control">
+                                <option ng-repeat="op in field.options">{{op.label}}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div ng-switch-when="TEXTAREA">
+                        <label>{{field.label}}</label>
+                        <div>
+                            <textarea class="form-control" placeholder={{field.placeholder}}></textarea>
+                        </div>
+                    </div>
+                    <div ng-switch-when="CHECKBOXES">
+                        <label>{{field.label}}</label>
+                        <div>
+                            <div class="checkbox">
+                                <div ng-repeat="op in field.options">
+                                    <label>
+                                        <input type="checkbox" value={{op.value}}>{{op.label}}
+                                    </label>
+                                    <br>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div ng-switch-when="RADIOS">
+                        <label>{{field.label}}</label>
+                        <div class="input-group">
+                            <div ng-repeat="op in field.options" class="radio">
+                                <label>
+                                    <input type="radio" name={{op.label}} value={{op.value}} checked>
+                                    {{op.label}}
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div ng-switch-default>
+                        <label>{{field.label}}</label>
+                        <div>
+                            <input type="date" placeholder={{field.placeholder}} class="form-control">
+                        </div>
+                    </div>
                 </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" value="Student">Student</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" value="User" checked>User</label>
+
+                <div class="col-sm-3">
+                    <button ng-click="editField(field)" type="button" class="btn btn-warning"
+                            data-toggle="modal" data-target="#editField">
+                        <span  class="  glyphicon glyphicon-pencil"></span>
+                    </button>
+                      <button ng-click="cloneField(field)" type="button" class="btn btn-success">
+                    <span  class="  glyphicon glyphicon-plus"></span>
+                </button>
+                    <button ng-click="deleteField(field)" type="button" class="btn btn-danger">
+                        <span  class="glyphicon glyphicon-remove"></span> 
+                    </button>
+                     <button ng-click="orderField()" type="button" class="btn btn-info">
+                    <span  class="glyphicon glyphicon-align-justify"></span> 
+                </button>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                </a>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-12">
-                <label>License Agreement:</label>
-            </div>
-            <div class="col-sm-8">
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>Yes
-                    </label>
-                </div>
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">No
-                    </label>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                </a>
-            </div>
-        </div>
 
-        <ul class="nav nav-list">
-            <li class="divider"></li>
-        </ul>
-        <h1 class="page-header"></h1>
-    </form>
-
-    <form class="form">
-        <div class="form-group">
-            <div class="col-sm-12">
-                <label for="inputNewField">Add New Field</label>
-            </div>
-            <div class="col-sm-8">
-                <select class="form-control" id="inputNewField">
-                    <option>Single Line Text</option>
-                    <option>Date</option>
-                    <option>Dropdown</option>
-                    <option>Checkboxes</option>
-                    <option>Radio buttons</option>
-                    <option>Paragraph Text</option>
-                </select>
-            </div>
-            <div class="col-sm-4">
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </a>
-                <a href="../users/register.view.html">
-                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                </a>
-            </div>
         </div>
     </form>
 
+    <hr>
+    <div>
+        <label for="input">Add New Field:</label>
+        <div>
+            <div class="col-sm-10">
+                <select ng-model="fieldType" class="form-control" id="input">
+                    <option>Single Line Text Field</option>
+                    <option>Date Field</option>
+                    <option>Dropdown Field</option>
+                    <option>Checkboxes Field</option>
+                    <option>Radio Buttons Field</option>
+                    <option>Multi Line Text Field</option>
+                </select>
+            </div>
+            <div class="input-group-btn col-sm-2">
+                <button ng-click="addField(fieldType)" type="button" class="btn btn-success">
+                    <span class="glyphicon glyphicon-plus"></span>
+                </button>
+            </div>
+        </div>
+    </div>
 
+    <div id="editField" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">{{efield.label}}</h4>
+                </div>
+                <div class="modal-body">
+                    <div ng-switch="efield.type">
+                        <div ng-switch-when="TEXT"> 
+                            <h3>Single Line Field</h3> 
+                            <form> 
+                                <label>Label</label> 
+                                <input ng-model="efield.label" class="form-control" type="text" 
+                                       placeholder={{efield.label}}> 
+                                <br> 
+                                <label>Placeholder</label> 
+                                <input ng-model="efield.placeholder" class="form-control" type="text" 
+                                       placeholder={{efield.placeholder}}> 
+                            </form> 
+                        </div> 
+                        <div ng-switch-when="TEXTAREA"> 
+                            <h3>Multi Line Field</h3> 
+                            <form> 
+                                <label>Label</label> 
+                                <input ng-model="efield.label" class="form-control" type="text" 
+                                       placeholder={{efield.label}}> 
+                                <br> 
+                                <label>Placeholder</label> 
+                            <textarea ng-model="efield.placeholder" class="form-control" 
+                                      placeholder={{efield.placeholder}}></textarea> 
+                            </form> 
+                        </div> 
+                        <div ng-switch-when="OPTIONS"> 
+                            <h3>Dropdown Field</h3> 
+                            <form> 
+                                <label>Label</label> 
+                                <input ng-model="efield.label" class="form-control" type="text" 
+                                       placeholder={{efield.label}}> 
+                                <br> 
+                                <label>Options</label> 
+                            <textarea ng-model="efield.optionText" class="form-control" 
+                                      placeholder={{efield.optionText}} ng-list="&#10;" ng-trim="false"></textarea> 
+                            </form> 
+                        </div> 
+                        <div ng-switch-when="DATE"> 
+                            <h3>Date Field</h3> 
+                            <form> 
+                                <label>Label</label> 
+                                <input ng-model="efield.label" class="form-control" type="text"> 
+                                <br> 
+                            </form> 
+                        </div> 
+                        <div ng-switch-when="RADIOS"> 
+                            <h3>Radio Buttons Field</h3> 
+                            <form> 
+                                <label>Label</label> 
+                                <input ng-model="efield.label" class="form-control" type="text" 
+                                       placeholder={{efield.label}}> 
+                                <br> 
+                                <label>Options</label> 
+                            <textarea ng-model="efield.optionText" class="form-control" placeholder={{efield.optionText}}
+                                      ng-list="&#10;" ng-trim="false"></textarea> 
+                            </form> 
+                        </div> 
+                        <div ng-switch-default> 
+                            <h3>Checkbox Field</h3> 
+                            <form> 
+                                <label>Label</label> 
+                                <input ng-model="efield.label" class="form-control" type="text" 
+                                       placeholder={{efield.label}}> 
+                                <br> 
+                                <label>Options</label> 
+                            <textarea ng-model="efield.optionText" class="form-control" 
+                                      placeholder={{efield.optionText}} ng-list="&#10;" ng-trim="false"></textarea> 
+                            </form> 
+                        </div> 
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button ng-click="commitEdit(efield)" type="button" class="btn btn-default" 
+                            data-dismiss="modal">Ok </button> 
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
