--- a/public/assignment/client/views/sidebar/sidebar.view.html
+++ b/public/assignment/client/views/sidebar/sidebar.view.html
@@ -1,8 +1,8 @@
 <div ng-controller="SidebarController">
     <ul class="nav nav-sidebar">
         <li ng-class="{'active': $location.url() == '/home'}"><a href="#/home">Home</a></li>
-        <li ng-show="isUser()" ng-class="{'active': $location.url() == '/profile'}"><a href="#/profile">Profile</a></li>
-        <li ng-show="isAdmin()" ng-class="{'active': $location.url() == '/admin'}"><a href="#/admin">Admin</a></li>
-        <li ng-show="isUser()" ng-class="{'active': $location.url() == '/forms'}"><a href="#/forms">Form</a></li>
+        <li ng-show="currentUser" ng-class="{'active': $location.url() == '/profile'}"><a href="#/profile">Profile</a></li>
+        <li ng-show="currentUser.roles.indexOf('admin') >= 0" ng-class="{'active': $location.url() == '/admin'}"><a href="#/admin">Admin</a></li>
+        <li ng-show="currentUser" ng-class="{'active': $location.url() == '/forms'}"><a href="#/forms">Form</a></li>
     </ul>
 </div>
