--- a/public/assignment/client/views/users/login.view.html
+++ b/public/assignment/client/views/users/login.view.html
@@ -5,20 +5,20 @@
         <div class="form-group">
             <label for="inputName" class="col-sm-2 control-label">Username: </label>
             <div class="col-sm-10">
-                <input ng-model="userLogin.username" type="text" class="form-control" id="inputName" placeholder="Username">
+                <input ng-model="user.username" type="text" class="form-control" id="inputName" placeholder="Username">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputPassword" class="col-sm-2 control-label">Password: </label>
             <div class="col-sm-10">
-                <input ng-model="userLogin.password" type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <input ng-model="user.password" type="password" class="form-control" id="inputPassword" placeholder="Password">
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <a ng-click="login()" type="submit" class="btn btn-default btn-block" role="button">Login</a>
+                <a ng-click="login(user)" type="submit" class="btn btn-default btn-block" role="button">Login</a>
             </div>
         </div>
 
