--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -9,41 +9,41 @@
         <div class="form-group">
             <label for="inputName" class="col-sm-2 control-label">Username: </label>
             <div class="col-sm-10">
-                <input ng-model="userProfile.username" type="text" class="form-control" ng-value="getUserName()" id="inputName" placeholder="Username">
+                <input ng-model="currentUser.username" type="text" class="form-control" id="inputName" placeholder="Username">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputPassword" class="col-sm-2 control-label">Password: </label>
             <div class="col-sm-10">
-                <input ng-model="userProfile.password" type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <input ng-model="currentUser.password" type="password" id="inputPassword" class="form-control" placeholder="Password">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputFirstName" class="col-sm-2 control-label">First Name: </label>
             <div class="col-sm-10">
-                <input ng-model="userProfile.firstName" type="text" class="form-control" ng-value="getFirstName()" id="inputFirstName" ng-value="{{user.username}}" placeholder="First Name">
+                <input ng-model="currentUser.firstName" type="text" class="form-control" id="inputFirstName" ng-value="{{user.username}}" placeholder="First Name">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputLastName" class="col-sm-2 control-label">Last Name: </label>
             <div class="col-sm-10">
-                <input ng-model="userProfile.lastName" type="text" class="form-control" ng-value="getLastName()" id="inputLastName" placeholder="Last Name">
+                <input ng-model="currentUser.lastName" type="text" class="form-control" id="inputLastName" placeholder="Last Name">
             </div>
         </div>
 
         <div class="form-group">
             <label for="inputEmail" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-                <input ng-model="userProfile.email" type="email" class="form-control" ng-value="getEmail()" id="inputEmail" placeholder="Email">
+                <input ng-model="currentUser.email" type="email" class="form-control" id="inputEmail" placeholder="Email">
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <a ng-click="update(userProfile)" type="submit" class="btn btn-default btn-block" role="button">Update</a>
+                <a ng-click="updateUser(currentUser)" type="submit" class="btn btn-default btn-block" role="button">Update</a>
             </div>
         </div>
 
