--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -1,208 +1,200 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header">{{title}}</h1>
-    <div>
-        <ul class="nav nav-tabs">
-            <li role="presentation">
-                <a href="#/forms">Forms</a>
-            </li>
-            <li role="presentation" class="active">
-                <a href="#/fields">Fields</a>
-            </li>
-        </ul>
-    </div>
+<div ng-controller="FieldsController">
+        <h1 style="text-align: center">{{title}}</h1>
+        <div>
+            <ul class="nav nav-tabs">
+                <li role="presentation">
+                    <a href="#/forms">Forms</a>
+                </li>
+                <li role="presentation" class="active">
+                    <a href="#/fields">Fields</a>
+                </li>
+            </ul>
+        </div>
 
-    <form class="form form-responsive">
-        <div ng-model="fields"  ui-sortable="fields" class="form-group">
-            <div  ng-switch="field.type" ng-repeat="field in fields" class="row">
-                <div class="col-sm-9">
-                    <div ng-switch-when="TEXT">
-                        <label>{{field.label}}</label>
-                        <div>
-                            <input type="text" class="form-control" placeholder={{field.placeholder}}>
+        <form class="form form-responsive">
+            <div ng-model="fields"  ui-sortable="fields" class="form-group">
+                <div  ng-switch="field.type" ng-repeat="field in fields" class="row">
+                    <div class="col-sm-9">
+                        <div ng-switch-when="TEXT">
+                            <label>{{field.label}}</label>
+                            <div>
+                                <input type="text" class="form-control" placeholder={{field.placeholder}}>
+                            </div>
                         </div>
-                    </div>
-                    <div ng-switch-when="EMAIL">
-                        <label>{{field.label}}</label>
-                        <div>
-                            <input type="text" class="form-control" placeholder={{field.placeholder}}>
+                        <div ng-switch-when="EMAIL">
+                            <label>{{field.label}}</label>
+                            <div>
+                                <input type="text" class="form-control" placeholder={{field.placeholder}}>
+                            </div>
                         </div>
-                    </div>
-                    <div ng-switch-when="OPTIONS">
-                        <label>{{field.label}}</label>
-                        <div>
-                            <select class="form-control">
-                                <option ng-repeat="op in field.options">{{op.label}}</option>
-                            </select>
+                        <div ng-switch-when="OPTIONS">
+                            <label>{{field.label}}</label>
+                            <div>
+                                <select class="form-control">
+                                    <option ng-repeat="op in field.options">{{op.label}}</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div ng-switch-when="TEXTAREA">
-                        <label>{{field.label}}</label>
-                        <div>
-                            <textarea class="form-control" placeholder={{field.placeholder}}></textarea>
+                        <div ng-switch-when="TEXTAREA">
+                            <label>{{field.label}}</label>
+                            <div>
+                                <textarea class="form-control" placeholder={{field.placeholder}}></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div ng-switch-when="CHECKBOXES">
-                        <label>{{field.label}}</label>
-                        <div>
-                            <div class="checkbox">
-                                <div ng-repeat="op in field.options">
-                                    <label>
-                                        <input type="checkbox" value={{op.value}}>{{op.label}}
-                                    </label>
-                                    <br>
+                        <div ng-switch-when="CHECKBOXES">
+                            <label>{{field.label}}</label>
+                            <div>
+                                <div class="checkbox">
+                                    <div ng-repeat="op in field.options">
+                                        <label>
+                                            <input type="checkbox" value={{op.value}}>{{op.label}}
+                                        </label>
+                                        <br>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div ng-switch-when="RADIOS">
-                        <label>{{field.label}}</label>
-                        <div class="input-group">
-                            <div ng-repeat="op in field.options" class="radio">
-                                <label>
-                                    <input type="radio" name={{op.label}} value={{op.value}} checked>
-                                    {{op.label}}
-                                </label>
+                        <div ng-switch-when="RADIOS">
+                            <label>{{field.label}}</label>
+                            <div class="input-group">
+                                <div ng-repeat="op in field.options" class="radio">
+                                    <label>
+                                        <input type="radio" name={{op.label}} value={{op.value}} checked>
+                                        {{op.label}}
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div ng-switch-default>
+                            <label>{{field.label}}</label>
+                            <div>
+                                <input type="date" placeholder={{field.placeholder}} class="form-control">
                             </div>
                         </div>
                     </div>
-                    <div ng-switch-default>
-                        <label>{{field.label}}</label>
-                        <div>
-                            <input type="date" placeholder={{field.placeholder}} class="form-control">
-                        </div>
+
+                    <div class="col-sm-3" style="margin-top: 30px">
+                        <a ng-click="editField(field)" type="button"
+                                data-toggle="modal" data-target="#editField">
+                            <span  class="  glyphicon glyphicon-pencil" style="font-size: 25px;"></span>
+                        </a>
+                          <a type="button">
+                        <span  class="glyphicon glyphicon-plus" style="font-size: 25px;"></span>
+                    </a>
+                        <a ng-click="deleteField(field)" type="button">
+                            <span  class="glyphicon glyphicon-remove" style="font-size: 25px;"></span> 
+                        </a>
+                         <a type="button">
+                        <span  class="glyphicon glyphicon-align-justify" style="font-size: 25px;"></span> 
+                    </a>
                     </div>
                 </div>
 
-                <div class="col-sm-3">
-                    <button ng-click="editField(field)" type="button" class="btn btn-warning"
-                            data-toggle="modal" data-target="#editField">
-                        <span  class="  glyphicon glyphicon-pencil"></span>
-                    </button>
-                      <button ng-click="cloneField(field)" type="button" class="btn btn-success">
-                    <span  class="  glyphicon glyphicon-plus"></span>
-                </button>
-                    <button ng-click="deleteField(field)" type="button" class="btn btn-danger">
-                        <span  class="glyphicon glyphicon-remove"></span> 
-                    </button>
-                     <button ng-click="orderField()" type="button" class="btn btn-info">
-                    <span  class="glyphicon glyphicon-align-justify"></span> 
-                </button>
-                </div>
             </div>
+        </form>
 
-        </div>
-    </form>
-
-    <hr>
-    <div>
-        <label for="input">Add New Field:</label>
+        <hr>
         <div>
-            <div class="col-sm-10">
-                <select ng-model="fieldType" class="form-control" id="input">
-                    <option>Single Line Text Field</option>
-                    <option>Date Field</option>
-                    <option>Dropdown Field</option>
-                    <option>Checkboxes Field</option>
-                    <option>Radio Buttons Field</option>
-                    <option>Multi Line Text Field</option>
-                </select>
+            <div class="col-xs-10">
+                <label for="input">Add New Field:</label>
             </div>
-            <div class="input-group-btn col-sm-2">
-                <button ng-click="addField(fieldType)" type="button" class="btn btn-success">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </button>
+            <div>
+                <div class="col-xs-10">
+                    <select ng-model="fieldType" class="form-control" id="input">
+                        <option>Single Line Text Field</option>
+                        <option>Multi Line Text Field</option>
+                        <option>Date Field</option>
+                        <option>Dropdown Field</option>
+                        <option>Checkboxes Field</option>
+                        <option>Radio Buttons Field</option>
+                    </select>
+                </div>
+                <div class="input-group-btn col-xs-2">
+                    <a ng-click="addField(fieldType)" type="button">
+                        <span class="glyphicon glyphicon-plus" style="font-size: 25px;"></span>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div id="editField" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">{{efield.label}}</h4>
-                </div>
-                <div class="modal-body">
-                    <div ng-switch="efield.type">
-                        <div ng-switch-when="TEXT"> 
-                            <h3>Single Line Field</h3> 
-                            <form> 
-                                <label>Label</label> 
-                                <input ng-model="efield.label" class="form-control" type="text" 
-                                       placeholder={{efield.label}}> 
-                                <br> 
-                                <label>Placeholder</label> 
-                                <input ng-model="efield.placeholder" class="form-control" type="text" 
-                                       placeholder={{efield.placeholder}}> 
-                            </form> 
-                        </div> 
-                        <div ng-switch-when="TEXTAREA"> 
-                            <h3>Multi Line Field</h3> 
-                            <form> 
-                                <label>Label</label> 
-                                <input ng-model="efield.label" class="form-control" type="text" 
-                                       placeholder={{efield.label}}> 
-                                <br> 
-                                <label>Placeholder</label> 
+        <div id="editField" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h3 class="modal-title">{{getKey(efield.type)}}</h3>
+                    </div>
+                    <div class="modal-body">
+                        <div ng-switch="efield.type">
+                            <div ng-switch-when="TEXT"> 
+                                <form> 
+                                    <label>Label</label> 
+                                    <input ng-model="efield.label" class="form-control" type="text" 
+                                           placeholder={{efield.label}}> 
+                                    <br> 
+                                    <label>Placeholder</label> 
+                                    <input ng-model="efield.placeholder" class="form-control" type="text" 
+                                           placeholder={{efield.placeholder}}> 
+                                </form> 
+                            </div> 
+                            <div ng-switch-when="TEXTAREA"> 
+                                <form> 
+                                    <label>Label</label> 
+                                    <input ng-model="efield.label" class="form-control" type="text" 
+                                           placeholder={{efield.label}}> 
+                                    <br> 
+                                    <label>Placeholder</label> 
                             <textarea ng-model="efield.placeholder" class="form-control" 
                                       placeholder={{efield.placeholder}}></textarea> 
-                            </form> 
-                        </div> 
-                        <div ng-switch-when="OPTIONS"> 
-                            <h3>Dropdown Field</h3> 
-                            <form> 
-                                <label>Label</label> 
-                                <input ng-model="efield.label" class="form-control" type="text" 
-                                       placeholder={{efield.label}}> 
-                                <br> 
-                                <label>Options</label> 
+                                </form> 
+                            </div> 
+                            <div ng-switch-when="OPTIONS"> 
+                                <form> 
+                                    <label>Label</label> 
+                                    <input ng-model="efield.label" class="form-control" type="text" 
+                                           placeholder={{efield.label}}> 
+                                    <br> 
+                                    <label>Options</label> 
                             <textarea ng-model="efield.optionText" class="form-control" 
                                       placeholder={{efield.optionText}} ng-list="&#10;" ng-trim="false"></textarea> 
-                            </form> 
-                        </div> 
-                        <div ng-switch-when="DATE"> 
-                            <h3>Date Field</h3> 
-                            <form> 
-                                <label>Label</label> 
-                                <input ng-model="efield.label" class="form-control" type="text"> 
-                                <br> 
-                            </form> 
-                        </div> 
-                        <div ng-switch-when="RADIOS"> 
-                            <h3>Radio Buttons Field</h3> 
-                            <form> 
-                                <label>Label</label> 
-                                <input ng-model="efield.label" class="form-control" type="text" 
-                                       placeholder={{efield.label}}> 
-                                <br> 
-                                <label>Options</label> 
+                                </form> 
+                            </div> 
+                            <div ng-switch-when="DATE"> 
+                                <form> 
+                                    <label>Label</label> 
+                                    <input ng-model="efield.label" class="form-control" type="text"> 
+                                    <br> 
+                                </form> 
+                            </div> 
+                            <div ng-switch-when="RADIOS"> 
+                                <form> 
+                                    <label>Label</label> 
+                                    <input ng-model="efield.label" class="form-control" type="text" 
+                                           placeholder={{efield.label}}> 
+                                    <br> 
+                                    <label>Options</label> 
                             <textarea ng-model="efield.optionText" class="form-control" placeholder={{efield.optionText}}
                                       ng-list="&#10;" ng-trim="false"></textarea> 
-                            </form> 
-                        </div> 
-                        <div ng-switch-default> 
-                            <h3>Checkbox Field</h3> 
-                            <form> 
-                                <label>Label</label> 
-                                <input ng-model="efield.label" class="form-control" type="text" 
-                                       placeholder={{efield.label}}> 
-                                <br> 
-                                <label>Options</label> 
+                                </form> 
+                            </div> 
+                            <div ng-switch-default> 
+                                <form> 
+                                    <label>Label</label> 
+                                    <input ng-model="efield.label" class="form-control" type="text" 
+                                           placeholder={{efield.label}}> 
+                                    <br> 
+                                    <label>Options</label> 
                             <textarea ng-model="efield.optionText" class="form-control" 
                                       placeholder={{efield.optionText}} ng-list="&#10;" ng-trim="false"></textarea> 
-                            </form> 
-                        </div> 
+                                </form> 
+                            </div> 
+                        </div>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button ng-click="commitEdit(efield)" type="button" class="btn btn-default" 
-                            data-dismiss="modal">Ok </button> 
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button ng-click="commitEdit(efield)" type="button" class="btn btn-primary" data-dismiss="modal">Save changes </button> 
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </div>
-
