Fix fields bug.

--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -156,7 +156,7 @@
                                     <br> 
                                     <label>Options</label> 
                             <textarea ng-model="efield.optionText" class="form-control" 
-                                      placeholder={{efield.optionText}} ng-list="&#10;" ng-trim="false"></textarea> 
+                                      placeholder={{efield.optionText}}  ng-trim="false"></textarea> 
                                 </form> 
                             </div> 
                             <div ng-switch-when="DATE"> 
@@ -174,7 +174,7 @@
                                     <br> 
                                     <label>Options</label> 
                             <textarea ng-model="efield.optionText" class="form-control" placeholder={{efield.optionText}}
-                                      ng-list="&#10;" ng-trim="false"></textarea> 
+                                      ng-trim="false"></textarea> 
                                 </form> 
                             </div> 
                             <div ng-switch-default> 
@@ -185,7 +185,7 @@
                                     <br> 
                                     <label>Options</label> 
                             <textarea ng-model="efield.optionText" class="form-control" 
-                                      placeholder={{efield.optionText}} ng-list="&#10;" ng-trim="false"></textarea> 
+                                      placeholder={{efield.optionText}} ng-trim="false"></textarea> 
                                 </form> 
                             </div> 
                         </div>
