--- a/public/assignment/client/views/users/register.view.html
+++ b/public/assignment/client/views/users/register.view.html
@@ -2,7 +2,7 @@
     <h1 style="text-align: center">Register</h1>
 
     <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
-    <div ng-show="error"  vclass="alert alert-danger"  role="alert">{{error}}</div>
+    <div ng-show="error" class="alert alert-danger"  role="alert">{{error}}</div>
 
     <form class="form-horizontal">
         <div class="form-group">
