--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -3,7 +3,7 @@
     <h1 style="text-align: center">Forms</h1>
 
     <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
-    <div ng-show="error"  vclass="alert alert-danger"  role="alert">{{error}}</div>
+    <div ng-show="error"  class="alert alert-danger"  role="alert">{{error}}</div>
 
     <ul class="nav nav-tabs">
         <li role="presentation" ng-class="{'active': $location.url() == '/forms'}"><a href="#/forms">Forms</a></li>
