--- a/public/assignment/client/views/users/login.view.html
+++ b/public/assignment/client/views/users/login.view.html
@@ -1,7 +1,11 @@
 <div ng-controller="LoginController">
 
-    <form class="form-horizontal">
         <h1 style="text-align: center">Login</h1>
+
+        <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
+        <div ng-show="error"  class="alert alert-danger"  role="alert">{{error}}</div>
+
+    <form class="form-horizontal">
         <div class="form-group">
             <label for="inputName" class="col-sm-2 control-label">Username: </label>
             <div class="col-sm-10">
