--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -3,7 +3,7 @@
     <h1 style="text-align: center">Profile</h1>
 
     <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
-    <div ng-show="error"  vclass="alert alert-danger"  role="alert">{{error}}</div>
+    <div ng-show="error"  class="alert alert-danger"  role="alert">{{error}}</div>
 
     <form class="form-horizontal">
         <div class="form-group">
