--- a/public/blog/client/views/home/home.view.html
+++ b/public/blog/client/views/home/home.view.html
@@ -6,6 +6,8 @@
     <p ng-if="currentUser">
         Welcome {{currentUser.username}}
     </p>
-    <button class="btn btn-primary btn-lg btn-xlarge">Register Now</button>
+    <a href="#register">
+        <button class="btn btn-primary btn-lg btn-xlarge">Register Now</button>
+    </a>
     <!--<%= link_to "Register Now", signup_path, class: "btn btn-primary btn-lg btn-xlarge" %>-->
 </div>
