--- a/public/blog/client/views/search/search.view.html
+++ b/public/blog/client/views/search/search.view.html
@@ -1,4 +1,4 @@
-<h2>Search</h2>
+<h2>Seach</h2>
 
 <input ng-model="model.movie.title"
        class="form-control"
@@ -8,3 +8,30 @@
         class="btn btn-primary btn-block">
     Search
 </button>
+
+<div ng-if="model.data">
+    <h3>Search Results</h3>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Poster</th>
+            <th>Title</th>
+            <th>IMDB</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="movie in model.data.Search">
+            <td>
+                <img ng-src="{{movie.Poster}}"
+                     height="100px"/>
+            </td>
+            <td>
+                <a href="#/details/{{movie.imdbID}}">
+                    {{movie.Title}}
+                </a>
+            </td>
+            <td>{{movie.imdbID}}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
