--- a/public/blog/client/views/profile/profile.view.html
+++ b/public/blog/client/views/profile/profile.view.html
@@ -1,3 +1,25 @@
 <h2>Profile</h2>
 
-{{currentUser}}
+{{vm.profile}}
+
+<div ng-if="model.profile.likesMovies">
+
+    <h3>Movies I Like</h3>
+
+    <div class="panel panel-default jga-movie-panel"
+         ng-repeat="movie in model.profile.likesMovies">
+        <div class="panel-heading">
+            <a href="#/details/{{movie.imdbID}}">
+                {{movie.title}}
+            </a>
+        </div>
+        <div class="panel-body">
+            <a href="#/details/{{movie.imdbID}}">
+                <img ng-src="{{movie.poster}}" width="100px"/>
+            </a>
+        </div>
+    </div>
+
+</div>
+
+<div class="clear"></div>
