--- a/public/blog/client/views/details/details.view.html
+++ b/public/blog/client/views/details/details.view.html
@@ -10,7 +10,10 @@
 
 <button class="btn btn-primary"
         ng-click="model.favorite(model.data)">
-    <span class="glyphicon glyphicon-star-empty"></span>
+    <span ng-show="model.movie.likes.indexOf(currentUser._id) > -1"
+          class="glyphicon glyphicon-star"></span>
+    <span ng-show="!model.movie || !model.movie.likes || model.movie.likes.indexOf(currentUser._id) == -1"
+          class="glyphicon glyphicon-star-empty"></span>
 </button>
 
 <h4>Plot</h4>
@@ -24,3 +27,14 @@
         {{actor}}
     </li>
 </ul>
+
+<div ng-if="model.movie.userLikes">
+    <h4>Other Users that Like This Movie</h4>
+    <ul>
+        <li ng-repeat="user in model.movie.userLikes">
+            <a href="#/profile/{{user.username}}">
+                {{user.username}}
+            </a>
+        </li>
+    </ul>
+</div>
