--- a/public/blog/client/views/register/register.view.html
+++ b/public/blog/client/views/register/register.view.html
@@ -12,4 +12,5 @@
        placeholder="verify password"
        class="form-control"/>
 
-<button ng-click="model.register(model.user);" class="btn btn-primary btn-block">Register</button>
+<button ng-click="model.register(model.user);"
+        class="btn btn-primary btn-block">Register</button>
